# rust-discord-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: common.rs  ia_api.rs  ia_context.rs  main.rs  redis.rs
src/bot/: bot_manager.rs  mod.rs
src/bot/commands/: delete_context.rs  ia_ask.rs  ia_model_info.rs  mod.rs  ping.rs  play_rpg.rs
src/commands/: ia_ask.rs  ia_model_info.rs  mod.rs  ping.rs
src/ia/: ia_ask.rs  ia_context.rs  ia_model.rs  mod.rs
src/ia_api/: ia_ask.rs  ia_model.rs  mod.rs
src/tools/: log.rs  mod.rs
