[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
dotenv = "0.15"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = "0.27.5"
lazy_static = "1.5.0"
once_cell = "1.20.2"
